# Divida

./: .gitattributes  .gitignore  .travis.yml  LICENSE.md  README.md  divida.sln
divida/: Beneficiary.cpp  Beneficiary.h  BeneficiarySerializer.h  Core.cpp  Core.h  Exception.cpp  Exception.h  Expense.cpp  Expense.h  Item.cpp  Item.h  Object.h  ObjectSerializer.cpp  Person.cpp  Person.h  PersonSerializer.cpp  PersonSerializer.h  Report.cpp  Report.h  Transaction.cpp  Transaction.h  divida.pro  divida.vcxproj  divida.vcxproj.filters  pch.h
divida/projects/: divida.pro
hooks/: post-checkout.py  post-commit.py  post-merge.py  post-rewrite.py  regenerate_projects.py  setup.sh
projects/: CMakeLists.txt  cmake.project  generate.py  post.js
projects/cmake/: emscripten.cmake
projects/divida-tests/: CMakeLists.txt
src/: Beneficiary.cpp  Beneficiary.h  BeneficiarySerializer.cpp  BeneficiarySerializer.h  Core.cpp  Core.h  Date.cpp  Date.h  Exception.cpp  Exception.h  Expense.cpp  Expense.h  IXmlSerializer.h  Item.cpp  Item.h  Object.cpp  ObjectSerializer.cpp  ObjectSerializer.h  Person.cpp  Person.h  PersonSerializer.cpp  PersonSerializer.h  Report.cpp  Report.h  ReportXmlSerializer.cpp  ReportXmlSerializer.h  Transaction.cpp  Transaction.h  divida.pro  pch.h
src/divida/: Beneficiary.cpp  Beneficiary.h  BeneficiarySerializer.cpp  BeneficiarySerializer.h  Date.cpp  Exception.cpp  Exception.h  Expense.cpp  Expense.h  Item.cpp  Item.h  Object.cpp  Object.h  ObjectSerializer.cpp  ObjectSerializer.h  Person.cpp  Person.h  PersonSerializer.cpp  PersonSerializer.h  Report.cpp  Report.h  ReportXmlSerializer.cpp  ReportXmlSerializer.h  Transaction.cpp  Transaction.h  beneficiary.cpp  beneficiary.h  beneficiary_serializer.cpp  beneficiary_serializer.h  date.cpp  date.h  emscripten_bindings.cpp  exception.cpp  exception.h  expense.cpp  expense.h  group.cpp  group.h  item.cpp  item.h  (+18 more)
src/divida-console/: main.cpp
src/divida/io/: io.cpp  io.h  json_serialization.cpp  json_serialization.h
tests/: BeneficiaryTests.cpp  Core.h  DateTests.cpp  ExpenseTests.cpp  IntegrationTests.cpp  ItemTests.cpp  ObjectTests.cpp  Package.appxmanifest  PersonTests.cpp  ReportTests.cpp  TransactionTests.cpp  beneficiary_tests.cpp  date_tests.cpp  divida-tests.vcxproj  divida-tests.vcxproj.filters  divida_tests.cpp  divida_tests.h  expense_tests.cpp  integration_tests.cpp  io_tests.cpp  item_tests.cpp  main.cpp  object_tests.cpp  pch.h  person_tests.cpp  report_tests.cpp  to_string_tests.cpp  transaction_tests.cpp
tests/data/: gold.json
